# LoLMetaDumper

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md  main_external.cpp  main_internal.cpp  main_loader.cpp  mem.hpp  meta.hpp  patscanner.hpp  version.hpp
